--- a/frontend/src/pages/dashboard/ExperimentsTable/ExperimentsTable.scss
+++ b/frontend/src/pages/dashboard/ExperimentsTable/ExperimentsTable.scss
@@ -67,7 +67,7 @@
   &__checkmark {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 0.5rem;
     width: 1rem;
     height: 1rem;
     background-color: white;
